--- a/B2_BieuKieuDuLieuVaToanTu/BaiTap/UngDungMayTinh/UngDungMayTinh.html
+++ b/B2_BieuKieuDuLieuVaToanTu/BaiTap/UngDungMayTinh/UngDungMayTinh.html
@@ -20,8 +20,8 @@
 <p id="ketQua"></p>
 <script>
 function cong() {
-    let so1 =parseInt(document.getElementById('so1').value);
-    let so2 =parseInt(document.getElementById('so2').value);
+    let so1 =(document.getElementById('so1').value);
+    let so2 =(document.getElementById('so2').value);''
     let ketQua= document.getElementById('ketQua');
     ketQua.innerText= so1+so2;
 }
