--- a/CaseStudy/YeuCau3.html
+++ b/CaseStudy/YeuCau3.html
@@ -6,19 +6,73 @@
 </head>
 <body>
 <script>
-    // let nameCustomer = prompt("Enter name Customer:");
+    let emailCustomer ;
     let idCard ;
     let birthdayCustomer;
-    let emailCustomer ;
+    let discounts;
     let  rentDays;
     let pax;
     let checkValidate = false;
-    // let addressCustomer = prompt("Enter address Customer: ");
-    // let typeCustomer = prompt("Enter type Customer: ");
-    // let discount = prompt("Enter Discount: ");
-    // let typeRoom = prompt("Enter Type Room: ");
-    // let roomClass = prompt("Enter room class: ");
-    // let totalPays;
+    let nameCustomer = prompt("Enter name Customer:");
+    let nameStandardiezd = " ";
+    let addressCustomer = prompt("Enter address Customer: ");
+    let addressStandardiezd = " " ;
+    let typeCustomer = prompt("Enter type Customer: ");
+    let typeCustomerfile;
+    typeCustomer = typeCustomer.trim().toLocaleLowerCase();
+    for (let i = 0 ; i<typeCustomer.length;i++){
+        if (typeCustomer.charAt(i)===" "||typeCustomer.charAt(i+1)===" "){
+            continue;
+        }
+        if (i===0||typeCustomer.charAt(i-1)===" "){
+            typeCustomerfile += typeCustomer.charAt(i).toUpperCase();
+            continue;
+        }
+        typeCustomerfile += typeCustomer.charAt(i);
+    }
+    typeCustomer = typeCustomerfile;
+    addressCustomer = addressCustomer .trim().toLocaleLowerCase();
+    for (let i = 0;i <addressCustomer.length;i++){
+        if (addressCustomer.charAt(i)===" "||addressCustomer.charAt(i+1)=== " "){
+            continue;
+        }
+        if (i=== 0 || addressCustomer.charAt(i-1)===" "){
+            addressStandardiezd += addressCustomer.charAt(i-1).toUpperCase();
+            continue;
+        }
+        addressStandardiezd +=addressCustomer.charAt(i);
+    }
+    addressCustomer =  addressStandardiezd ;
+    nameCustomer = nameCustomer.trim().toLocaleLowerCase();
+    for (let i = 0; i<nameCustomer.length;i++){
+        if (nameCustomer.charAt(i)===" " && nameCustomer.charAt(i+1)===" "){
+            continue;
+        }
+        if (i=== 0|| nameCustomer.charAt(i - 1)===" " ){
+            nameStandardiezd += nameCustomer.charAt(i).toUpperCase();
+            continue;
+        }
+        nameStandardiezd +=nameCustomer.charAt(i);
+    }
+    nameCustomer = nameStandardiezd;
+    do {
+        checkValidate = true;
+        emailCustomer = prompt("Enter email Customer: ");
+        let countDoc = 0;
+        let countAt = 0;
+        for (let i = 0; i < emailCustomer; i++) {
+            if (emailCustomer.charAt(i) === "@") {
+                countDoc++;
+            }
+            if (emailCustomer.charAt(i) === ".") {
+                countDoc++;
+            }
+            if (countAt !== 1 || countDoc < 1) {
+                checkValidate = false;
+                alert("Email is Invalid !!! Please Try Again");
+            }
+        }
+    } while (!checkValidate);
     do {
         checkValidate = false;
         idCard = prompt("Enter Id Card Customer: ");
@@ -59,6 +113,15 @@
         }
     }while (!checkValidate);
     do {
+        checkValidate = true;
+        discounts = prompt("Enter Discount: ");
+        if (discounts>=0 && Number.parseInt(discounts)){
+            checkValidate = true;
+        }else {
+            alert(" Discounts is Invalid !!! Please Try Again");
+        }
+    }while (!checkValidate)
+    do {
         checkValidate = false;
         pax = prompt("Enter Number of people: ");
         if (pax > 0 && Number.parseInt(pax)) {
@@ -67,24 +130,6 @@
     }
     while (!checkValidate)
     do {
-        checkValidate = true;
-        emailCustomer = prompt("Enter email Customer: ");
-        let countDoc = 0;
-        let countAt = 0;
-        for (let i = 0; i < emailCustomer; i++) {
-            if (emailCustomer.charAt(i) === "@") {
-                countDoc++;
-            }
-            if (emailCustomer.charAt(i) === ".") {
-                countDoc++;
-            }
-            if (countAt !== 1 || countDoc < 1) {
-                checkValidate = false;
-                alert("Email is Invalid !!! Please Try Again");
-            }
-        }
-    } while (!checkValidate);
-    do {
         checkValidate = false;
         rentDays = prompt("Enter Rent Day: ");
         if (rentDays > 0 && Number.parseInt(rentDays)) {
@@ -92,9 +137,13 @@
         }
     } while (!checkValidate)
     alert("Information Of Customer: " +
+        "\n Name Customer: "+ nameCustomer +
+        "\n Email Customer:  " + emailCustomer +
+        "\n Address Customer: " +addressCustomer +
+        "\n Type Customer: " + typeCustomer +
         "\n Id Card: " + idCard +
         "\n Birthday: " + birthdayCustomer +
-        "\n Email Customer:  " + emailCustomer +
+        "\n Discounts: " + discounts +
         "\n Number of people: " + pax +
         "\n Rent Days: " + rentDays
     )
